fix: react ui Timeline tree spine vertical gap
This also updates S display mode to show only the tree, not the timeline bars or duration.

--- a/pdl-live-react/src/view/masonry/Masonry.css
+++ b/pdl-live-react/src/view/masonry/Masonry.css
@@ -29,7 +29,6 @@
 
   &[data-is-non-card] {
     padding: 1em;
-    &[data-padding="s"],
     &[data-padding="m"],
     &[data-padding="l"] {
       column-span: all;
